# financegraph

./: LICENSE  README.md  pyproject.toml
edgar/: cnsfails.py  commands.py  graphdata.py  graphsql.py  sql.py  submissions.py  tenk.py  thirteenf.py  utils.py
resources/: FORM13F_metadata.json
